--- a/html/miller2016.html
+++ b/html/miller2016.html
@@ -1705,11 +1705,12 @@ border-radius: 0px;
 <h1 class="title toc-ignore">Data Analysis Using Statistical Packages:
 Miller et al. (AJPS 2016)</h1>
 <h4 class="author">Sho Kuroda / 黒田翔</h4>
-<h4 class="date">2024年3月 (Last update: 2024年4月)</h4>
+<h4 class="date">最終更新：2025年5月</h4>
 
 </div>
 
 
+<p>このページに対応するRmdファイル：<a href="https://github.com/kurodaecon/dasp/blob/main/rmd/miller2016.Rmd">GitHub</a></p>
 <div id="overview" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Overview</h1>
 <p><a href="https://onlinelibrary.wiley.com/doi/full/10.1111/ajps.12234">Miller,
@@ -1896,12 +1897,16 @@ etc.</p>
 <h2><span class="header-section-number">2.2</span> Formal test:
 Regression (Table 2)</h2>
 <p>個人属性（年齢，性別，人種，所得，政治に関する知識，etc.）を制御したもとで，保守派かどうかが「保守派が好む陰謀論」に与える影響と，保守派かどうかが「リベラル派が好む陰謀論」に与える影響の大きさを比べる．</p>
+<p>要するに次のようなイメージ：</p>
+<ul>
+<li>調べたい関係：「保守自認 → 陰謀論を信じる」</li>
+<li>懸念（交絡）：「保守自認 ← 性別・年齢 → 陰謀論を信じる」</li>
+<li>対処：性別・年齢などをコントロール変数として回帰モデルに追加</li>
+</ul>
 <p>影響の大きさは回帰式の回帰係数として定量化する．</p>
 <p><span class="math display">\[ \mbox{Conservative conspiracy} =
 \beta_0 + \beta_1 \mbox{Self-identified as conservative} + \beta_2
 \mbox{Political knowledge} + \beta_3 \mbox{Trust} + \cdots \]</span></p>
-<p>懸念：教育や所得など bad control
-となっている可能性のある変数がコントロールに含まれる．</p>
 <p>Stata: <code>reg con_index_rep2 Conservative polknow_alt ...</code>
 etc.</p>
 <pre class="r"><code>lm_cons &lt;- lm(con_index_rep2 ~ Conservative + polknow_alt + trust_comb + extraversion + agreeableness + conscientiousness + emostab + openness + auth + efficacy + needcog_comb + needeval_comb_alt + ideo_extr + fed_power + religiosity + educ_alt + income + female + age_alt + latino + white, data = cons)
@@ -2146,6 +2151,115 @@ R2 Adj.
 https://www.stata.com/manuals/rsuest.pdf
 Section: Testing cross-model hypotheses
 --></p>
+<div id="supplement" class="section level3" number="2.2.1">
+<h3><span class="header-section-number">2.2.1</span> Supplement</h3>
+<p>懸念：教育や所得など bad control
+となっている可能性のある変数がコントロールに含まれる．</p>
+<ul>
+<li>想定される関係：「保守自認 → 教育・所得 → 陰謀論を信じる」</li>
+<li>ただし，明らかに問題の在りそうな変数（教育，所得）のみ除外して分析しても注目する推定値はほとんど変わらない</li>
+</ul>
+<!--
+
+```r
+lm_cons <- lm(con_index_rep2 ~ Conservative + polknow_alt + trust_comb + extraversion + agreeableness + conscientiousness + emostab + openness + auth + efficacy + needcog_comb + needeval_comb_alt + ideo_extr + fed_power + religiosity + female + age_alt + latino + white, data = cons)
+summary(lm_cons)
+```
+
+```
+## 
+## Call:
+## lm(formula = con_index_rep2 ~ Conservative + polknow_alt + trust_comb + 
+##     extraversion + agreeableness + conscientiousness + emostab + 
+##     openness + auth + efficacy + needcog_comb + needeval_comb_alt + 
+##     ideo_extr + fed_power + religiosity + female + age_alt + 
+##     latino + white, data = cons)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -0.52964 -0.11135 -0.01317  0.09100  0.66604 
+## 
+## Coefficients:
+##                     Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)        0.1961689  0.0299035   6.560 6.87e-11 ***
+## Conservative       0.2089798  0.0091471  22.847  < 2e-16 ***
+## polknow_alt       -0.1982360  0.0203201  -9.756  < 2e-16 ***
+## trust_comb        -0.0774457  0.0270562  -2.862 0.004249 ** 
+## extraversion       0.0805379  0.0143748   5.603 2.41e-08 ***
+## agreeableness     -0.0143537  0.0202198  -0.710 0.477862    
+## conscientiousness  0.0400290  0.0188950   2.119 0.034259 *  
+## emostab            0.0047057  0.0177997   0.264 0.791522    
+## openness          -0.0078647  0.0203049  -0.387 0.698553    
+## auth               0.0616451  0.0181292   3.400 0.000687 ***
+## efficacy          -0.0120787  0.0208566  -0.579 0.562566    
+## needcog_comb      -0.0433081  0.0124694  -3.473 0.000526 ***
+## needeval_comb_alt -0.0149362  0.0167136  -0.894 0.371617    
+## ideo_extr          0.0272176  0.0104990   2.592 0.009602 ** 
+## fed_power          0.1159168  0.0135822   8.534  < 2e-16 ***
+## religiosity        0.0571553  0.0108261   5.279 1.44e-07 ***
+## female             0.0088110  0.0079750   1.105 0.269367    
+## age_alt            0.0174435  0.0200370   0.871 0.384099    
+## latino            -0.0005209  0.0130314  -0.040 0.968119    
+## white              0.0105104  0.0102369   1.027 0.304678    
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 0.1602 on 1950 degrees of freedom
+##   ( 1122 個の観測値が欠損のため削除されました )
+## Multiple R-squared:  0.446,  Adjusted R-squared:  0.4406 
+## F-statistic: 82.61 on 19 and 1950 DF,  p-value: < 2.2e-16
+```
+
+```r
+lm_lib <- lm(con_index_dem4 ~ Conservative + polknow_alt + trust_comb + extraversion + agreeableness + conscientiousness + emostab + openness + auth + efficacy + needcog_comb + needeval_comb_alt + ideo_extr + fed_power + religiosity + female + age_alt + latino + white, data = cons)
+summary(lm_lib)
+```
+
+```
+## 
+## Call:
+## lm(formula = con_index_dem4 ~ Conservative + polknow_alt + trust_comb + 
+##     extraversion + agreeableness + conscientiousness + emostab + 
+##     openness + auth + efficacy + needcog_comb + needeval_comb_alt + 
+##     ideo_extr + fed_power + religiosity + female + age_alt + 
+##     latino + white, data = cons)
+## 
+## Residuals:
+##      Min       1Q   Median       3Q      Max 
+## -0.50137 -0.12751 -0.00775  0.12138  0.69600 
+## 
+## Coefficients:
+##                    Estimate Std. Error t value Pr(>|t|)    
+## (Intercept)        0.695316   0.033380  20.830  < 2e-16 ***
+## Conservative      -0.179036   0.010211 -17.534  < 2e-16 ***
+## polknow_alt       -0.142984   0.022683  -6.304 3.59e-10 ***
+## trust_comb        -0.312803   0.030202 -10.357  < 2e-16 ***
+## extraversion       0.017568   0.016046   1.095  0.27372    
+## agreeableness     -0.008429   0.022571  -0.373  0.70885    
+## conscientiousness  0.020105   0.021092   0.953  0.34061    
+## emostab           -0.016702   0.019869  -0.841  0.40067    
+## openness           0.104403   0.022666   4.606 4.37e-06 ***
+## auth              -0.008052   0.020237  -0.398  0.69075    
+## efficacy          -0.064630   0.023282  -2.776  0.00556 ** 
+## needcog_comb      -0.026905   0.013919  -1.933  0.05339 .  
+## needeval_comb_alt  0.038562   0.018657   2.067  0.03887 *  
+## ideo_extr          0.008389   0.011720   0.716  0.47421    
+## fed_power          0.019394   0.015161   1.279  0.20099    
+## religiosity        0.026130   0.012085   2.162  0.03072 *  
+## female             0.002454   0.008902   0.276  0.78281    
+## age_alt            0.051301   0.022367   2.294  0.02192 *  
+## latino            -0.001242   0.014547  -0.085  0.93194    
+## white             -0.089160   0.011427  -7.802 9.82e-15 ***
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Residual standard error: 0.1788 on 1950 degrees of freedom
+##   ( 1122 個の観測値が欠損のため削除されました )
+## Multiple R-squared:  0.2761, Adjusted R-squared:  0.269 
+## F-statistic: 39.14 on 19 and 1950 DF,  p-value: < 2.2e-16
+```
+-->
+</div>
 </div>
 </div>
 <div id="hypothesis-2-仮説2知識が豊富なほどイデオロギー的に一貫した陰謀を支持する" class="section level1" number="3">
@@ -2416,7 +2530,58 @@ R2 Adj.
 </tr>
 </tfoot>
 </table>
-<p>知識によってイデオロギーの効果がどのように異なるかを可視化する（Figure
+<p>この分析において重要な部分は次の箇所：</p>
+<p><span class="math display">\[ \mbox{Cons. conspiracy} = - 0.030
+(\mbox{Self-id Cons.}) - 0.296 (\mbox{knowledge}) + \\ 0.362
+(\mbox{Self-id Cons.} \times \mbox{knowledge}) + \cdots \]</span></p>
+<p>上の部分（<span class="math inline">\(\cdots\)</span>
+より前の部分）に限定すれば，アウトカム変数は次のように予測される．</p>
+<table>
+<colgroup>
+<col width="33%" />
+<col width="33%" />
+<col width="33%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center">Knowledge</th>
+<th align="center">Self-id Conservative <br /> (Self-id Cons. = 1)</th>
+<th align="center">Self-id Liberal <br /> (Self-id Cons. = 0)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center">0</td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 1 - 0.296
+\cdot 0 + 0.362 \cdot 1 \cdot 0 \\ = -0.030\)</span></td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 0 - 0.296
+\cdot 0 + 0.362 \cdot 0 \cdot 0 \\ = 0\)</span></td>
+</tr>
+<tr class="even">
+<td align="center">0.5</td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 1 - 0.296
+\cdot 0.5 + 0.362 \cdot 1 \cdot 0.5 \\ = 0.003\)</span></td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 0 - 0.296
+\cdot 0.5 + 0.362 \cdot 0 \cdot 0.5 \\ = -0.148\)</span></td>
+</tr>
+<tr class="odd">
+<td align="center">1</td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 1 - 0.296
+\cdot 1 + 0.362 \cdot 1 \cdot 1 \\ = 0.036\)</span></td>
+<td align="center"><span class="math inline">\(-0.030 \cdot 0 - 0.296
+\cdot 1 + 0.362 \cdot 0 \cdot 1 \\ = - 0.296\)</span></td>
+</tr>
+</tbody>
+</table>
+<p>要するに，（客観的に測定される）政治的知識が高い人はそうでない人と比べて保守的陰謀論に陥る可能性がどのように異なるかは，自認するイデオロギーによって変わる．</p>
+<ul>
+<li>保守を自認する人は，知識が高いほど僅かに保守的陰謀論に染まる（あるいは，ほとんど変わらない）．
+知識がある人でもイデオロギーに一致する陰謀論を否定することは難しい（あるいは，否定するどころか僅かに陰謀論により傾く）．</li>
+<li>その一方で，リベラルを自認する人は，知識が高いほど保守的陰謀論から遠ざかる．</li>
+<li>興味深いことに，知識水準が低い人々が保守的陰謀論に染まる可能性は自認するイデオロギーによってほとんど変わらない．
+（知識水準が低い人々はイデオロギーに沿って陰謀論を取捨選択しているわけではなく，接する陰謀論がどのようなイデオロギーに一致するかすら理解できていないということ？？）</li>
+</ul>
+<p>以上を踏まえて，知識によってイデオロギーの効果がどのように異なるかを可視化する（Figure
 1）．</p>
 <p>Stata: <code>marginsplot</code> ect.</p>
 <pre class="r"><code># install.packages(&quot;sjPlot&quot;)
